2012-03-20  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* cpp/src/CMakeLists.txt:

	- Fix project name. No good reason why this was called
	GerardusItkToolsProject. Now called GERARDUS_CPP.

	- Instead of relying on having TCLAP installed externally, now we
	distribute it with Gerardus as a third-party library.

	* Add cpp/src/third-party/tclap-1.2.1:

	- TCLAP is the Templatized C++ Command Line Parser Library

	http://tclap.sourceforge.net/

	We use it in C++ programmes to set the syntax of the command and
	read input arguments from the command line.  It's trivial to
	install in Linux, but Windows users have to download, unzip and
	copy it to a local folder.  Then, writing a FindTCLAP.cmake would
	be a bit complicated. As the library doesn't need to be compiled
	(it works as a collection of templated C++ header files), it's
	going to be much simpler to just redistribute the library in
	Gerardus.

2012-03-19  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* matlab/ItkToolbox/CMakeLists.txt:

	- Bug spotted by Pablo Lamata: ITK v4.x requires to use
	${ITK_LIBRARIES} instead of e.g. ITKCommon ITKIO when defining
	targets. I have made the change now in advance of moving to ITK
	4.x.

	http://groups.google.com/group/gerardus-users/browse_thread/thread/62aa9fcb67045ae8

	* matlab/FiltersToolbox/CMakeLists.txt:

	- Bug spotted by Pablo Lamata: ITK v4.x requires to use
	${ITK_LIBRARIES} instead of e.g. ITKCommon ITKIO when defining
	targets. I have made the change now in advance of moving to ITK
	4.x.

	http://groups.google.com/group/gerardus-users/browse_thread/thread/62aa9fcb67045ae8

	- No longer build the MEX function deconvolve(). It depends on the
	Clarity library, that depends on the FFTW library. Matlab has its
	own FFTW library, and I haven't found the way yet of preventing
	them to clash with the ones installed outside Matlab.

	* matlab/CMakeLists.txt:

	- Remove SET(CMAKE_BUILD_TYPE RELEASE). That's set in the root
	CMakeLists.txt, not here.
